ecmascript/parser/tests/test262-error-references/fail/f03be7c48423eaed.js.stderr
error: Expected 4 hex characters
 --> $DIR/tests/test262-parser/fail/f03be7c48423eaed.js:1:1
  |
1 | \u113
  | ^^^^^

